This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

26-Jan-2002 (Lars Duening)  (3.3.378)
  - (main, lex, prolang, object, simulate.c, configure) Removed the
       configuration option INITIALIZATION_BY___INIT and changed the driver
       to always use __INIT(). However, the variable sharing between clone
       and blueprint is now selectable on a per-program basis with the
       pragmas 'share_variables' and 'init_variables'. The default
       setting for the pragma can be set with the configuration option
       --enable-share-variables and with the commandline arguments
       --share-variables and --init-variables.

26-Jan-2002 (Lars Duening)  (3.3.377)
  - (prolang.y) Removed a compilation problem (reported by Markus).
  - (xptmalloc.c) Removed compiler warnings regarding intentionally
       unused variables.

26-Jan-2002 (Lars Duening)  (3.3.376)
  - (configure) The check for pthread_atfork() never succeeded (reported by
       Nostradamus).
  - (object.c) Removed a compiler warning (reported by Nostradamus).
  - (prolang.y) Removed a compilation problem.

25-Jan-2002 (Lars Duening)  (3.3.374+.375)
  - (prolang.y, interpret.c, func_spec) Implemented short-circuit evaluation
       for the operators '&&=' and '||='.

25-Jan-2002 (Lars Duening)  (3.3.373)
  - (bitstrings.c, mstrings, efuns.c, interpret.c, lex.c) Corrected a string
       refcount error in and/or/xor_bits() (reported by Markus).

24-Jan-2002 (Lars Duening)  (3.3.372)
  - (lex.c) Included #pragma xxx_types settings are no longer restricted
       to the include file's scope (reported by Gnomi).

24-Jan-2002 (Lars Duening)  (3.3.371)
  - (object.c) save/restore didn't look out for shared closures, which
       could lead to endless recursions.
  - (prolang.y) When compiling the context for inline closures, references
       to local variables (for initialisation) were already redirected