@@ -55,12 +55,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 378)
-(Parent-Version lpmud 3-3 377)
-(Version-Log "Implemented the share-variables/init-variables system.")
+(Project-Version lpmud 3-3 379)
+(Parent-Version lpmud 3-3 378)
+(Version-Log "Corrected the &&=/||= generation.")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 26 Jan 2003 21:27:52 -0700")
+(Checkin-Time "Sun, 26 Jan 2003 22:27:19 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -97,7 +97,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.58 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.441 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.442 644))
   (HISTORY (lpmud/f/49_HISTORY 1.298 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -260,7 +260,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.16 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.29 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.30 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
